Fix paragraph text-alignment issue

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -27,7 +27,7 @@ textarea {
       margin-top: 10px;
   }
 
-  p {
+  p.account {
       text-align: center;
   }
 
